--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Style/style.css">
     <title>나만의 최고 평점 영화</title>
-    <script type="module" src="src/main.js"></script>
+    <script type="module" src="Src/main.js"></script>
 </head>
 
 <body>
