--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Style/style.css">
     <title>나만의 최고 평점 영화</title>
-    <script type="module" src="Src/main.js"></script>
+    <script src="Src/main.js" type="module"></script>
 </head>
 
 <body>
     <header>
         <h1>나만의 최고 평점 영화</h1>
+        <!-- <button id = "test">test</button> -->
     </header>
     <div class = "search">
         <label>영화 검색 : </label>
@@ -21,12 +22,25 @@
     </div>
     <section class="card-list">
         <!-- <div class="movie-card" id="278">
-            <img src="https://image.tmdb.org/t/p/w500/9cqNxx0GxF0bflZmeSMuL5tnGzr.jpg" alt="The Shawshank Redemption">
+            <img src="" alt="The Shawshank Redemption">
             <h3 class="movie-title">The Shawshank Redemption</h3>
             <p>Framed in the 1940s for the double murder of his wife and her lover, upstanding banker Andy Dufresne begins a new life at the Shawshank prison, where he puts his accounting skills to work for an amoral warden. During his long stretch in prison, Dufresne comes to be admired by the other inmates -- including an older prisoner named Red -- for his integrity and unquenchable sense of hope.</p>
             <p>Rating: 8.704</p>
         </div> -->
     </section>
+    
+    <div>      
+        <nav class="bottom">
+            <button id="prev-btn">이전 페이지</button>
+            <button class="bottom-elem" >1</button> 
+            <button class="bottom-elem">2</button> 
+            <button class="bottom-elem" id="cur-page">3</button> 
+            <button class="bottom-elem">4</button> 
+            <button class="bottom-elem">5</button>      
+            <button id="next-btn">다음 페이지</button>
+        </nav>
+    </div>
+    
 </body>
 
 </html>
