--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 
 <body>
     <header>
+        <div class = "Home">
+            <button id = "Home-btn">Home</button>
+        </div>
         <div class = "search">
             <input id="search-input" placeholder="Search movies..." autofocus/>
             <button id="search-btn">Go</button>
